<?xml version="1.0"?>
<package format="2">
  <name>dwa_planner</name>
  <version>0.0.0</version>
  <description>The dwa_planner package</description>
  <maintainer email="lifei@aimo.ai">amsl</maintainer>

  <license>BSD 3-Clause License</license>


  <build_depend>perception_msgs</build_depend>
  <build_export_depend>perception_msgs</build_export_depend>
  <exec_depend>perception_msgs</exec_depend>
  <build_depend>actuator</build_depend>
  <build_export_depend>actuator</build_export_depend>
  <exec_depend>actuator</exec_depend>
  <build_depend>planner</build_depend>
  <build_export_depend>planner</build_export_depend>
  <exec_depend>planner</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>eigen</depend>

  <export>
  </export>

</package>
